@@ -1,3 +1,8 @@
+2004-11-09  Vincent Noel  <vnoel@cox.net>
+
+	* logview.c (logview_copy): Add a "copy" menuitem to copy the
+	content of the active log line to the clipboard.
+
 2004-11-05  Vincent Noel  <vnoel@cox.net>
 
 	* logrtns.c: Remove a warning.
